# VulnerablePython

./: .gitignore  Makefile  README.md  gunicorn.conf.py  init.sql  pyproject.toml  wsgi.py
app/: __init__.py  configs.py  extensions.py  models.py
app/api/: __init__.py  code_injection.py  command_injection.py  hardcoded_password.py  index.py  path_traversal.py  sql_injection.py  ssrf.py  xss.py
app/utils/: response.py
